# SCAU_AdvancedProgLang_CourseDesign

./: .gitignore  .gitmodules  CMakeLists.txt  delete.py  main.cpp
data/: course.json  enrollment.json  student.json
include/core/: Course.hpp  Enrollment.hpp  Student.hpp
include/screen/: CourseScreen.hpp  EnrollmentScreen.hpp  StudentScreen.hpp
include/utils/: CourseUtils.hpp  DataLoader.hpp  EnrollmentUtils.hpp  StudentUtils.hpp
src/core/: Course.cpp  Enrollment.cpp  Student.cpp
src/screen/: CourseScreen.cpp  EnrollmentScreen.cpp  StudentScreen.cpp
src/utils/: CourseUtils.cpp  DataLoader.cpp  EnrollmentUtils.cpp  StudentUtils.cpp
